feat: add record tree browse api
